[project]
name = "unet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentations>=2.0.5",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.scripts]
unet = "unet:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "torchview",
]

test = []

docs = [
    "furo>=2024.8.6",
    "sphinx>=8.1.3",
    "sphinx-book-theme>=1.1.4",
    "sphinx-copybutton>=0.5.2",
    "sphinx-press-theme>=0.9.1",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.uv]
default-groups = ["docs", "dev", "test"]
